--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'com.github.jsimone:webapp-runner:8.5.11.3'
+    compile 'org.apache.commons:commons-text:1.1'
 }
 
 task stage() {
@@ -21,7 +22,7 @@ task stage() {
 war.mustRunAfter clean
 
 task copyToLib(type: Copy) {
-    into '$buildDir/server'
+    into 'build/server'
     from (configurations.compile) {
         include 'webapp-runner*'
     }
