--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,11 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'com.github.jsimone:webapp-runner:8.5.11.3'
     compile 'org.apache.commons:commons-text:1.1'
+    compile group: 'org.postgresql', name: 'postgresql', version: '9.4-1200-jdbc41'
+    compile group: 'org.apache.struts', name: 'struts2-core', version: '2.2.3'
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.10.Final'
+    compile group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
+
 }
 
 task stage() {
